--- a/nuevo-usuario.html
+++ b/nuevo-usuario.html
@@ -20,14 +20,7 @@
                 <div class="col-8">
                     <form id="formulario" novalidate>
                         <div class="form-group">
-                            <label for="">Nombre del restaurante: </label> <font color="red">*</font>
-                            <input type="text" name="res" placeholder="Escriba el nombre del restaurante" class="form-control" required> 
-                            <div class="invalid-feedback">
-                                Ingresa datos
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="">Nombre de usuario del administrador:  </label> <font color="red">*</font>
+                            <label for="">Nombre de usuario:  </label> <font color="red">*</font>
                             <input name="usu" type="text" placeholder="Escriba el nombre para iniciar sesión en el sistema" class="form-control" required> 
                             <div class="invalid-feedback">
                                 Ingresa datos
@@ -46,26 +39,33 @@
                             <div class="invalid-feedback">
                                 Ingresa datos
                               </div>
-                        </div>                
+                        </div>
                         <div class="form-group">
-                            <label for="">Nombre del administrador </label>
+                            <label for="">Nombre del usuario: </label>
                             <input name="nom"type="text" placeholder="Escriba el nombre del administrador" class="form-control"> 
                         </div>                
                         <div class="form-group">
-                                <label for="">Apellido paterno del administrador</label>
+                                <label for="">Apellido paterno del usuario: </label>
                                 <input name="pat" type="text" placeholder="Escriba el apellido paterno del administrador" class="form-control"> 
                         </div>  
                         <div class="form-group">
-                            <label for="">Apellido materno del administrador</label>
+                            <label for="">Apellido materno del usuario</label>
                             <input name ="mat" type="text" placeholder="Escriba el apellido materno del administrador" class="form-control"> 
                         </div>                
                         <div class="form-group">
                             <label for="">Teléfono de contacto</label>
-                            <input name="tel" type="number" placeholder="Escriba el teléfono de contacto del administrador" class="form-control"> 
+                            <input name="tel" type="number"  value=0 placeholder="Escriba el teléfono de contacto del administrador" class="form-control"> 
                         </div>
                         <div class="form-group">
                             <label for="">Dirección:</label>
                             <input name="dir" type="text" placeholder="Escriba la dirección del administrador / restaurante." class="form-control"> 
+                        </div>
+                        <div class="form-group">
+                            <label for="">Tipo de usuario</label> <font color="red">*</font>
+                            <select class="form-control" name="tip">
+                                <option>administrador</option>
+                                <option>empleado</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-danger">Continuar</button>
@@ -92,7 +92,7 @@
                 })();
                 </script>    
     </body>
-    <script src="js/clean-install.js"></script>
+    <script src="js/agregar-usuario.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
