--- a/menu-install.html
+++ b/menu-install.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, inicial-scale=1">        
+        <meta name="viewport" content="width=device-width, inicial-scale=1">
         <title>
             SubstanceSoft: Personalizar
         </title>
@@ -45,7 +45,7 @@
                                     <div class="card-block">
                                         <h4 class="card-title">Ingredientes</h4>
                                         <p class="card-text">Administre los distintos ingredientes usados en el sistema</p>
-                                        <p><a href="#" class="btn btn-primary">Agregar</a></p>
+                                        <p><a href="nuevo-ingrediente.html" class="btn btn-primary">Agregar</a></p>
                                         <p><a href="#" class="btn btn-primary">Ver</a></p>
                                         <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                     </div>
@@ -57,12 +57,12 @@
                                         <div class="card-block">
                                             <h4 class="card-title">Mesas</h4>
                                             <p class="card-text">Administre las distintas mesas que hay en el sistema.</p>
-                                            <p><a href="#" class="btn btn-primary">Agregar</a></p>
+                                            <p><a href="nueva-mesa.html" class="btn btn-primary">Agregar</a></p>
                                             <p><a href="#" class="btn btn-primary">Ver</a></p>
                                             <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                         </div>
                                 </div>
-                        </div>    
+                        </div>
             </div>
             <p>&nbsp;</p>
                 <div class="card-deck">
@@ -113,7 +113,7 @@
                                                 <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                             </div>
                                     </div>
-                            </div>    
+                            </div>
                 </div>
         </section>
     </body>
