Agregado de php con listado de usuarios.

--- a/menu-install.html
+++ b/menu-install.html
@@ -22,14 +22,14 @@
                                 <h4 class="card-title">Usuarios</h4>
                                 <p class="card-text">Administre las credenciales con las que se usa el sistema</p>
                                 <p><a href="nuevo-usuario.html" class="btn btn-primary">Agregar</a></p>
-                                <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                <p><a href="listar-usuarios.php" class="btn btn-primary">Ver</a></p>
                                 <p><a href="#" class="btn btn-primary">Modificar</a></p>
                             </div>
                     </div>
                 </div>
                 <div class="card text-center">
                         <div class="card-body">
-                                <img class="card-img-top img-fluid" src="src/users.png" alt="Usuarios">
+                                <img class="card-img-top img-fluid" src="src/cocinas.png" alt="Cocinas">
                                 <div class="card-block">
                                     <h4 class="card-title">Cocinas</h4>
                                     <p class="card-text">Administre las múlltiples zonas de cocina en el sistema</p>
