Configurado como cliente
Ya sirve el configurado.
Falta meterle css y una opción  de resetear, supongo.
Eso ya para después :) :100: :100:

--- a/SubstanceSoft/setup.html
+++ b/SubstanceSoft/setup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <title>SubstanceSoft: Empezando</title>
@@ -9,11 +9,11 @@
 <body>
     <div align="center">
         <img src="images/24x24.png">
-        <h1 style="font-family:Arial" >Seleccione la opción correspondiente</h1>
+        <h1 style="font-family:Arial" >Seleccione la opci&oacute;n correspondiente</h1>
         <p>Soy administrador</p>
         <button id ="setup">Configurar sistema</button>
         <p>Quiero conectarme a un sistema</p>
-        <input type="text" id = "ip" placeholder="Escriba la IP del módulo central">
+        <input type="text" id = "ip" placeholder="Escriba la IP del m&oacute;dulo central">
         <button id="connect">Conectarse</button>
     </div>
 </body>
