--- a/SubstanceSoft/setup.html
+++ b/SubstanceSoft/setup.html
@@ -8,12 +8,13 @@
 
 <body>
     <div align="center">
-        <img src="images/24x24.png">
+        <img src="images/96x96.png">
         <h1 style="font-family:Arial" >Seleccione la opci&oacute;n correspondiente</h1>
         <p>Soy administrador</p>
         <button id ="setup">Configurar sistema</button>
         <p>Quiero conectarme a un sistema</p>
-        <input type="text" id = "ip" placeholder="Escriba la IP del m&oacute;dulo central">
+        <input size="50" class="in" type="text" id = "ip" placeholder="Escriba la IP del m&oacute;dulo central">
+        <p></p>
         <button id="connect">Conectarse</button>
     </div>
 </body>
