--- a/SubstanceSoft/setup.html
+++ b/SubstanceSoft/setup.html
@@ -9,14 +9,17 @@
 <body>
     <div align="center">
         <img src="images/96x96.png">
-        <h1 style="font-family:Arial" >Seleccione la opci&oacute;n correspondiente</h1>
+        <h1 style="font-family:Arial">Seleccione la opci&oacute;n correspondiente</h1>
         <p>Soy administrador</p>
-        <button id ="setup">Configurar sistema</button>
+        <button id="setup">Configurar sistema</button>
         <p>Quiero conectarme a un sistema</p>
-        <input size="50" class="in" type="text" id = "ip" placeholder="Escriba la IP del m&oacute;dulo central">
-        <p></p>
-        <button id="connect">Conectarse</button>
+        <form>
+            <input size="50" class="in" type="text" id="ip" placeholder="Escriba la IP del m&oacute;dulo central">
+            <p></p>
+            <button id="connect">Conectarse</button>
+        </form>
     </div>
 </body>
 <script src="setup.js"></script>
+
 </html>
