Pequeños cambios que Elmo Lina identificó en revisión
No hay avance porcentual, pero si cambios en visualización.

--- a/SubstanceSoft/setup.html
+++ b/SubstanceSoft/setup.html
@@ -15,6 +15,8 @@
         <p>Quiero conectarme a un sistema</p>
         <form>
             <input size="50" class="in" type="text" id="ip" placeholder="Escriba la IP del m&oacute;dulo central">
+            <br></br> 
+            <input size="50" class="in" type="text" id="alias" placeholder="Elija un alias para este equipo">
             <p></p>
             <button id="connect">Conectarse</button>
         </form>
