--- a/SubstanceSoft/setup.html
+++ b/SubstanceSoft/setup.html
@@ -9,16 +9,21 @@
 <body>
     <div align="center">
         <img src="images/96x96.png">
+        <hr></hr>
         <h1 style="font-family:Arial">Seleccione la opci&oacute;n correspondiente</h1>
-        <p>Soy administrador</p>
-        <button id="setup">Configurar sistema</button>
-        <p>Quiero conectarme a un sistema</p>
+        <p><strong>Soy administrador</strong></p>
+        <a class="btn">
+                <button id="setup">Configurar sistema</button>
+        </a>
+        <p><strong>Quiero conectarme a un sistema</strong></p>
         <form>
             <input size="50" class="in" type="text" id="ip" placeholder="Escriba la IP del m&oacute;dulo central">
             <br></br> 
             <input size="50" class="in" type="text" id="alias" placeholder="Elija un alias para este equipo">
             <p></p>
-            <button id="connect">Conectarse</button>
+            <a class="btn">            
+                <button id="connect">Conectarse</button>
+            </a>
         </form>
     </div>
 </body>
